top-banner-section

--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ekram Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="hero-name">Ekram Hosen </span>World</h1>
+            <h3>Front-end Developer</h3>
+            <p class="main-p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui laboriosam atque porro libero odio placeat officia ut      nostrum est sed enim, culpa reprehenderit quidem facere cumque nisi ad commodi, dolor distinctio magni dicta quae! Labore perferendis doloribus omnis praesentium fugiat.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/ekram-hosen/">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="img/pic-1.png" alt="Hero Image">
+        </div>
+    </section>
     
 </body>
 </html>
