dream-big-added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
             <img src="img/pic-1.png" alt="Hero Image">
         </div>
     </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="img/pic-2.png" alt="Hero Second Image">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Becom Full Stack Developer</h3>
+            <p class="main-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium hic nesciunt eligendi alias, quis, pariatur inventore aliquid dolor dolores at cum amet in ipsa harum commodi ratione officiis. Recusandae est porro distinctio explicabo voluptate inventore officiis deleniti necessitatibus quod dolores?</p>
+            <a class="link-button" target="_blank" href="#">Download Resume</a>
+        </div>
+    </section>
     
 </body>
 </html>
