--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="hero-name">Ekram Hosen </span>World</h1>
+            <h1><span class="orange-color">Ekram Hosen </span>World</h1>
             <h3>Front-end Developer</h3>
             <p class="main-p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui laboriosam atque porro libero odio placeat officia ut      nostrum est sed enim, culpa reprehenderit quidem facere cumque nisi ad commodi, dolor distinctio magni dicta quae! Labore perferendis doloribus omnis praesentium fugiat.</p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/ekram-hosen/">Hire Me</a>
@@ -24,7 +24,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="img/pic-2.png" alt="Hero Second Image">
         </div>
@@ -35,6 +35,28 @@
             <a class="link-button" target="_blank" href="#">Download Resume</a>
         </div>
     </section>
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="web-baby-developer" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+            <div id="web-pro-developer" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>
+            #Ekram Hosen
+        </p>
+    </footer>
     
 </body>
 </html>
