--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <footer>
         <p>
-            #Ekram Hosen
+            © Peter Parker 2021, a Programming Hero initiative.
         </p>
     </footer>
     
